# cmlangtools

./: CMakeLists.txt  CMakePresets.json  cmlangtools.cpp  readme.md  test1.cmake  test_cml1_fail.cmake
